margin changes for spacing. fix reversing code on careers page.

--- a/app/site/typography.styl
+++ b/app/site/typography.styl
@@ -1,4 +1,3 @@
-$lineHeight = 1.5em
 /*
 "
 I am not dealing with font size insanity. Here is the deal.
@@ -14,7 +13,7 @@ Use REM units for fanciness but also include pixels for unsupported browsers
 http://snook.ca/archives/html_and_css/font-size-with-rem
 "
 */
-fontSize(size)
+fontSize(size, lineHeightRatio=1.5)
   pixels = 12 if size < -1
   pixels = 14 if size == -1
   pixels = 20 if size ==  0 //Base size 0 for main body content
@@ -24,8 +23,8 @@ fontSize(size)
   pixels = 40  if size > 3
   font-size unit(pixels, px)
   font-size unit((pixels/10), rem)
-  line-height unit((pixels * 1.5), px)
-  line-height unit((pixels * 1.5 / 10), rem)
+  line-height unit((pixels *  lineHeightRatio), px)
+  line-height unit((pixels * lineHeightRatio / 10), rem)
 
 html
   //This is a magic number that keeps 1em equal to 10px
@@ -39,17 +38,17 @@ header h1
   font-size 6rem
 
 p
-  margin-top ($lineHeight * 2)
+  margin-top 1.5em
+  margin-bottom 3em
 
 h1, h2, h3
-  margin 1.2em 0
   font-family Poly, Georgia, Serif
 h1
-  fontSize 3
+  fontSize 3 1
 h2
-  fontSize 2
+  fontSize 2 1
 h3
-  fontSize 1
+  fontSize 1 1
 
 nav
   fontSize -1
@@ -62,8 +61,9 @@ nav.post
 pre
   fontSize -1
 
-// img
-//   max-width 100%
+ul, ol
+  margin-top 1em
+  margin-bottom 2em
 
 @media screen and (max-width: 720px)
   body
